# gurobiMCP

./: .env.example  .gitignore  README.md  check_structured.py  pyproject.toml
.claude/skills/speckit-plan/: SKILL.md
.github/: copilot-instructions.md
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  copilot.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
app/: config.py  main.py
app/api/: auth.py  chat.py
app/core/: crypto.py  security.py
app/db/: database.py  models.py
app/schemas/: auth.py  chat.py
app/services/: container_manager.py  files.py  mcp_client.py  reaper.py  session_registry.py
deploy/: Caddyfile  gurobimcp.service
specs/001-gurobi-mcp-backend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-gurobi-mcp-backend/checklists/: requirements.md
specs/001-gurobi-mcp-backend/contracts/: mcp-tools.md  openapi.yaml
